--- a/signoz/signoz.yaml
+++ b/signoz/signoz.yaml
@@ -6,7 +6,7 @@ metadata:
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: signoz-helm
+  name: helm-repository
   namespace: signoz
 spec:
   interval: 1m0s
@@ -15,7 +15,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: signoz-helm-release
+  name: helm-release
   namespace: signoz
 spec:
   targetNamespace: signoz
