dummy ingress just to get it going

--- a/signoz/ingress.yaml
+++ b/signoz/ingress.yaml
@@ -10,5 +10,5 @@ spec:
     - kind: Rule
       match: Host(`otel.local.net`)
       services:
-        - name:
+        - name: otel-svc.signoz
           port: 4317
