--- a/signoz/signoz.yaml
+++ b/signoz/signoz.yaml
@@ -6,7 +6,7 @@ metadata:
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: helm-repository
+  name: signoz-helm
   namespace: signoz
 spec:
   interval: 1m0s
@@ -25,8 +25,8 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: signoz
-      version: 0.109.0
+        name: signoz-helm
+      version: 0.101.0
   interval: 1m0s
   valuesFrom:
     - kind: ConfigMap
