removing the namespace since its the same thing

--- a/signoz/ingress.yaml
+++ b/signoz/ingress.yaml
@@ -10,15 +10,15 @@ spec:
     - kind: Rule
       match: Host(`otel.local.net`) && PathPrefix(`/v1/metrics`)
       services:
-        - name: signoz-helm-release-otel-collector.signoz
+        - name: signoz-helm-release-otel-collector
           port: 4318
     - kind: Rule
       match: Host(`otel.local.net`) && PathPrefix(`/v1/logs`)
       services:
-        - name: signoz-helm-release-otel-collector.signoz
+        - name: signoz-helm-release-otel-collector
           port: 4318
     - kind: Rule
       match: Host(`otel.local.net`) && PathPrefix(`/v1/traces`)
       services:
-        - name: signoz-helm-release-otel-collector.signoz
+        - name: signoz-helm-release-otel-collector
           port: 4318
