--- a/umami/deployment.yaml
+++ b/umami/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: umami-pod
-          image: ghcr.io/umami-software/umami:postgresql-latest
+          image: ghcr.io/umami-software/umami:latest
           imagePullPolicy: IfNotPresent
           env:
             - name: DATABASE_TYPE
