--- a/signoz/ingress.yaml
+++ b/signoz/ingress.yaml
@@ -22,3 +22,17 @@ spec:
       services:
         - name: signoz-signoz-helm-otel-collector
           port: 4318
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: signoz-otel-syslogroute
+  namespace: signoz
+spec:
+  entryPoints:
+    - syslog
+  routes:
+    - match: HostSNI(\`*\`)
+      services:
+        - name: signoz-signoz-otel-collector
+          port: 54527
