--- a/gotify/service.yml
+++ b/gotify/service.yml
@@ -5,10 +5,9 @@ metadata:
   namespace: gotify
 spec:
   selector:
-    app: gotify-deploy
+    app: gotify-server
   type: ClusterIP
   ports:
-  - name: myjob
-    protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
