feat(gotify): fixing service

--- a/gotify/service.yml
+++ b/gotify/service.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: gotify
 spec:
   selector:
-    app: gotify-server
+    app: gotify-deploy
   type: ClusterIP
   ports:
     - protocol: TCP
