fix(signoz): mount host fs for metrics

--- a/signoz/signoz-k8s-config.yaml
+++ b/signoz/signoz-k8s-config.yaml
@@ -199,7 +199,14 @@ data:
               exporters: [otlphttp]
             logs:
               exporters: [otlphttp]
-      extraVolumes: []
-      extraVolumeMounts: []
+      extraVolumes:
+        - name: hostfs
+          hostPath:
+            path: /
+      extraVolumeMounts:
+        - name: hostfs
+          mountPath: /hostfs
+          readOnly: true
+          mountPropagation: HostToContainer
     otelDeployment:
       enabled: false
