fix(signoz): no ingress needed for internal traffic

--- a/signoz/signoz-k8s-config.yaml
+++ b/signoz/signoz-k8s-config.yaml
@@ -17,7 +17,7 @@ data:
     fullnameOverride: ""
     enabled: true
     clusterName: ""
-    otelCollectorEndpoint: otel.local.net
+    otelCollectorEndpoint: signoz-signoz-helm-otel-collector.signoz.svc.cluster.local
     otelInsecure: true
     insecureSkipVerify: false
     signozApiKey: ""
@@ -187,7 +187,7 @@ data:
       config:
         exporters:
           otlphttp:
-            endpoint: http://otel.local.net
+            endpoint: http://signoz-signoz-helm-otel-collector.signoz.svc.cluster.local:4318
         service:
           telemetry:
             logs:
