--- a/n8n/deployment.yaml
+++ b/n8n/deployment.yaml
@@ -56,6 +56,10 @@ spec:
               value: https
             - name: WEBHOOK_URL
               value: https://automate.mvaldes.dev
+            - name: N8N_METRICS
+              value: true
+            - name: N8N_PROXY_HOPS
+              value: 2
           ports:
             - containerPort: 5678
           volumeMounts:
