feat(n8n): unstable version

--- a/n8n/deployment.yaml
+++ b/n8n/deployment.yaml
@@ -23,8 +23,7 @@ spec:
             - name: n8n-pvc
               mountPath: /data
       containers:
-        - image: n8nio/n8n:stable
-          name: n8n
+        - image: n8nio/n8n:next
           command:
             - /bin/sh
           args:
