--- a/vault/configmap.yaml
+++ b/vault/configmap.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vault-cm
-  namespace: vault 
+  namespace: vault
 data:
   values.yaml: |
     server:
       standalone:
-        enabled: true
-        config: |
+       enabled: true
+       config: |
           ui = true
 
           listener "tcp" {
@@ -18,6 +18,10 @@ data:
           }
           storage "file" {
             path = "/vault/data"
+          }
+          telemetry {
+            disable_hostname = true
+            prometheus_retention_time = "12h"
           }
       service:
         enabled: true
@@ -31,4 +35,3 @@ data:
      serviceType: ClusterIP
     injector:
       enabled: falseo
-
