--- a/signoz/configmap.yaml
+++ b/signoz/configmap.yaml
@@ -47,6 +47,26 @@ data:
             method: GET
         collection_interval: 30s
 
+      prometheus:
+        config:
+          scrape_configs:
+            - job_name: k8s-pods
+              kubernetes_sd_configs:
+                - role: pod
+              relabel_configs:
+                - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+                  action: keep
+                  regex: "true"
+                - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+                  action: replace
+                  target_label: __metrics_path__
+                  regex: (.+)
+                - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+                  action: replace
+                  regex: ([^:]+)(?::\d+)?;(\d+)
+                  replacement: $1:$2
+                  target_label: __address__
+
     processors:
       batch:
         timeout: 10s
@@ -70,7 +90,7 @@ data:
     service:
       pipelines:
         metrics:
-          receivers: [httpcheck]
+          receivers: [httpcheck, prometheus]
           processors: [resource, batch]
           exporters: [otlp]
 
