feat(n8n): annotations for monitoring

--- a/n8n/deployment.yaml
+++ b/n8n/deployment.yaml
@@ -14,6 +14,10 @@ spec:
     metadata:
       labels:
         app: n8n-deploy
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "5678"
     spec:
       initContainers:
         - name: volume-permissions
