fix(n8n): quote boolean/integer env values to fix Flux dry-run failure
N8N_METRICS and N8N_PROXY_HOPS were unquoted causing a type mismatch
error in Flux kustomization dry-run for 462 days. Also corrects the
Prometheus scrape port from 5678 to 443 where n8n actually listens.

--- a/n8n/deployment.yaml
+++ b/n8n/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/path: /metrics
-        prometheus.io/port: "5678"
+        prometheus.io/port: "443"
     spec:
       initContainers:
         - name: volume-permissions
@@ -60,9 +60,9 @@ spec:
             - name: WEBHOOK_URL
               value: https://automate.mvaldes.dev
             - name: N8N_METRICS
-              value: true
+              value: 'true'
             - name: N8N_PROXY_HOPS
-              value: 2
+              value: '2'
           ports:
             - containerPort: 5678
           volumeMounts:
