feat(signoz): update collector for new migration agent

--- a/signoz/signoz-config.yaml
+++ b/signoz/signoz-config.yaml
@@ -514,7 +514,7 @@ data:
         registry: docker.io
         repository: signoz/signoz-otel-collector
         pullPolicy: IfNotPresent
-      imagePullSecrets: []
+        tag: v0.144.1
       initContainers:
         init:
           enabled: false
