--- a/fluxcd/sources/git.yaml
+++ b/fluxcd/sources/git.yaml
@@ -1,6 +1,17 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
+  name: bot-repository
+  namespace: flux-system
+spec:
+  interval: 1m
+  ref:
+    branch: main
+  url: https://github.com/mvaldes14/twitch-bot
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
   name: homelab-repository
   namespace: flux-system
 spec:
