--- a/fluxcd/kustomizations/capacitor.yaml
+++ b/fluxcd/kustomizations/capacitor.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  timeout: 1m
+  timeout: 5m
   chartRef:
     kind: OCIRepository
     name: capacitor-next-helm
@@ -15,4 +15,4 @@ spec:
       AUTH: noauth
       AUTH_DEBUG: "true" #logs impersonation headers
       IMPERSONATE_SA_RULES: "noauth=flux-system:capacitor-next-preset-clusteradmin"
-    existingSecret: capacitor-next-helm
+    existingSecret: capacitor-next
