--- a/fluxcd/kustomizations/capacitor.yaml
+++ b/fluxcd/kustomizations/capacitor.yaml
@@ -15,4 +15,5 @@ spec:
       AUTH: noauth
       AUTH_DEBUG: "true" #logs impersonation headers
       IMPERSONATE_SA_RULES: "noauth=flux-system:capacitor-next-preset-clusteradmin"
-    existingSecret: capacitor-next
+    existingSecret:
+      name: capacitor-next
